--- a/sekiguchi_parallax/css/style.css
+++ b/sekiguchi_parallax/css/style.css
@@ -1,6 +1,6 @@
 @charset :"UTF-8";
 
-/*****再生ボタン*****/
+/***************再生ボタン***************/
 /*白丸部分 */
 .btn .anc:before {
     content: "";
@@ -54,7 +54,7 @@
     height: 1px;
 }
 
-/*****再生ボタン*****/
+/***************再生ボタン***************/
 
 body {
     width: 100%;
